<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <CheckBox
        android:id="@+id/autoConnectCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_autoconnect_boot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_dns_label" />

    <EditText
        android:id="@+id/dnsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_dns_hint"
        android:inputType="textUri" />

    <CheckBox
        android:id="@+id/muxCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_mux" />

</LinearLayout>
